# Course-Django

./: README.md
APIs com Python e Django/projeto-eventos/: db.sqlite3  pyproject.toml
APIs com Python e Django/projeto-eventos/agenda/: admin.py  models.py  tests.py  urls.py  views.py
APIs com Python e Django/projeto-eventos/agenda/migrations/: 0001_initial.py  0002_alter_evento_link_alter_evento_local.py  0003_alter_evento_local.py  0004_alter_evento_id.py  0005_usuario.py  0006_evento_users.py  0007_categoria_remove_evento_users_alter_evento_id_and_more.py  0008_evento_date.py  0009_alter_evento_date.py  (+2 more)
APIs com Python e Django/projeto-eventos/vamomarcar/: asgi.py  settings.py  urls.py  wsgi.py
Django Master Python Code/Carros/: db.sqlite3  pyproject.toml
Django Master Python Code/Carros/app/: settings.py  urls.py
Django Master Python Code/Carros/app/templates/: base.html
Django Master Python Code/Carros/cars/: admin.py  apps.py  forms.py  models.py  views.py
Django Master Python Code/Carros/cars/templates/: new_car.html
Django/Carros/: db.sqlite3
Django/Carros/app/: settings.py  urls.py
Django/Carros/cars/: views.py
Mozilla-Tutorial/: db.sqlite3  pyproject.toml
Mozilla-Tutorial/catalog/: admin.py  models.py  urls.py  views.py
Mozilla-Tutorial/catalog/migrations/: 0001_initial.py  0002_language_alter_bookinstance_id_bookinstance_language.py  0003_rename_isnb_book_isbn_rename_sumary_book_summary.py
Mozilla-Tutorial/catalog/templates/: base_generic.html
Mozilla-Tutorial/locallibrary/: asgi.py  settings.py  urls.py  wsgi.py
(+11 files in other folders)
